Generate configuration parameters overview  (#5932)
Introduce a `@ConfigurationProperty` annotation for documenting
configuration parameters and an annotation processor for generating a
machine-readable `META-INF/junit-platform-configuration-metadata.json`
in the format of Spring Boots Configuration Metadata.

```
/**
 * A brief multi-line description of
 * this property: {@value}.
 *
 * <p>Followed by an additional paragraph.
 */
@ConfigurationProperty
public static final String EXAMPLE_PROPERTY_NAME = "org.example.property";
```

The annotation processor takes all the information from the obvious
places. Of note is that the first paragraph from the doc string is used
and the ``: {@value}.` that we conventionally use is replaced with a `.`.

Limitations:
- `Metadata.groups`, `Metadata.hints`, `Metadata.ignored` are not yet
  implemented.
- While `Property.default` supports lists of values, the implementation
  is intentionally limited to a single value.